--- a/preview-src/index.adoc
+++ b/preview-src/index.adoc
@@ -17,6 +17,15 @@ Vestibulum consectetur nec urna a luctus.
 Quisque pharetra tristique arcu fringilla dapibus.
 Curabitur ut massa aliquam, cursus enim et, accumsan lectus.
 
+== User Details (Query Params)
+
+Hello %USER% your password is %PASSWORD%
+
+You need to https://console.openshift.com[login,role=userfied-link]
+
+
+Hello $USERNAME your password is $PASSWORD
+
 == Cu solet
 
 Nominavi luptatum eos, an vim hinc philosophia intellegebat.
