Improve error handling and xref support
Malformed links could break the "preserve query string" function which could in turn stop querystring replacement for most of the page

Catches any error attempted to replace querystring elements in a link and logs as an error

To minimize errors, query string replacement on links is done *before* attempting to preserve query strings

xrefs (of type a.page) automatically have querystring preserved in their links

--- a/preview-src/index.adoc
+++ b/preview-src/index.adoc
@@ -56,6 +56,9 @@ And this also should not: [.no-query-replace]`%USER%`
 
 You should see USER replacement here: %USER% but not here: [.no-query-replace]#%USER%#
 
+=== Xrefs
+
+xref:index.adoc#link-testing[This,role="page"] is an xref that needs the query string preserved.
 
 == Cu solet
 
